--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 Jalan Sei Selayang No. 28  <br>
                 Kecamatan Medan Baru, Sumatera Utara, 20154<br><br>
                 <strong>Phone:</strong> +62<br>
-                <strong>Email:</strong>latahzan@gmai.com<br>
+                <strong>Email:</strong>rebornlatahzan@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
